--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upgrade Study App | Get Ready For That Upgrade!</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <h1>Welcome to the Upgrade Study App</h1>
-    <p>Select an option below:</p>
-    <ul>
-      <li><a href="/questions/create">Add Question</a></li>
-      <li><a href="/quiz">Start Quiz</a></li>
-      <li><a href="/questions/:id/edit">Modify Question</a></li>
-    </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Upgrade Study App</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/questions/create">Add Question</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/questions/:id/edit"
+                  >Modify Question</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/questions">View All Questions</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/quiz">Start Quiz!</a>
+              </li>
+            </ul>
+            <form class="d-lg-flex d-block my-2 my-lg-0 ms-auto">
+              <div class="input-group">
+                <input
+                  class="form-control"
+                  type="search"
+                  placeholder="Search questions..."
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Search
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="container-fluid mt-5 main-content">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-12 col-md-6 text-center">
+          <h1 class="display-1 mb-4">Upgrade Study App</h1>
+          <p class="lead">Get Ready For That Upgrade!</p>
+        </div>
+      </div>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
   </body>
 </html>
