--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quiz</title>
+    <title>Quiz Time! | Show Me What You Got!</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,28 +13,28 @@
     />
   </head>
   <body>
+    <h1>Quiz Time!</h1>
     <div class="container">
-      <div class="card my-5">
-        <div class="card-header">
-          <h3 class="card-title">Question <%= currentQuestion + 1 %></h3>
-        </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1661963559290-2d8c4cb2b33e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
-          <h4 class="card-title"><%= questions[currentQuestion].question %></h4>
-          <p class="card-text hide"><%= questions[currentQuestion].answer %></p>
-          <button class="btn btn-primary" id="show-answer">Show Answer</button>
-        </div>
-        <div class="card-footer">
-          <div class="d-flex justify-content-between">
-            <% if (currentQuestion > 0) { %>
-            <button class="btn btn-secondary" id="prev-question">
-              Previous Question
-            </button>
-            <% } %> <% if (currentQuestion < questions.length - 1) { %>
-            <button class="btn btn-secondary" id="next-question">
-              Next Question
-            </button>
-            <% } %>
-          </div>
+          <h5 class="card-title">
+            <% if(questions.length === 0) { %>
+            <h5>No questions to display</h5>
+            <% } else { %> <%=questions[0].question %>
+          </h5>
+          <% } %>
+
+          <p class="card-text"><% if(questions.length === 0) { %></p>
+
+          <h5>No answers to display</h5>
+          <% } else { %> <%=questions[0].answer %> <% } %>
+
+          <button class="btn btn-success">Show Answer</button>
         </div>
       </div>
     </div>
@@ -43,6 +43,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="js/quiz.js"></script>
+    <srcipt src="js/quiz.js"></srcipt>
   </body>
 </html>
