added more styling and more functionality

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/quiz.css" />
   </head>
   <body>
-    <h1 class="text-center">Quiz Time!</h1>
+    <h1 class="text-center mt-5">Quiz Time!</h1>
     <div class="container">
       <div class="checkbox-container">
         <label for="showAnswersCheckbox">Always show answers</label>
@@ -41,6 +41,13 @@
           <button class="btn btn-primary" id="prev-question">Prev</button>
           <button class="btn btn-primary" id="next-question">Next</button>
         </div>
+      </div>
+      <div class="d-flex justify-content-center mt-3">
+        <a href="/"
+          ><button type="button" class="btn btn-outline-secondary">
+            Homepage
+          </button></a
+        >
       </div>
     </div>
     <script
