--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,55 +12,39 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Upgrade Study App</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/questions/create">Add Question</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/questions/:id/edit"
-                  >Modify Question</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/questions">View All Questions</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/quiz">Start Quiz!</a>
-              </li>
-            </ul>
-            <form class="d-lg-flex d-block my-2 my-lg-0 ms-auto">
-              <div class="input-group">
-                <input
-                  class="form-control"
-                  type="search"
-                  placeholder="Search questions..."
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </div>
-            </form>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Upgrade Study App</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/questions/create">Add Question</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/questions/:id/edit">Modify Question</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/questions">View All Questions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/quiz">Start Quiz!</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+    <div class="dark-overlay"></div>
     <main class="container-fluid mt-5 main-content">
       <div class="row justify-content-center align-items-center">
         <div class="col-12 col-md-6 text-center">
@@ -68,7 +52,26 @@
           <p class="lead">Get Ready For That Upgrade!</p>
         </div>
       </div>
+      <hr />
+      <div class="row justify-content-center align-items-center mt-5">
+        <div class="col-12 col-md-6 text-center">
+          <h2 class="mb-4">
+            The app that will help you get ready for your upgrade class.
+          </h2>
+          <p class="lead">Developed by:</p>
+        </div>
+      </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+    <footer class="bg-dark text-center text-white py-3">
+      App &copy 2023 | EAB Solutions, Inc.
+    </footer>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
+      integrity="sha512-3b6NNjU6+ZUjtzrNvlzO01OyxtcYkW9sGKjOZtyxJ/AXM2Qlz0zIxdQyQj48ly0PSkX9hYfxF+utAhC1mqHm/w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </body>
 </html>
