--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Questions</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/css/questions.css" />
   </head>
   <body>
@@ -15,9 +21,9 @@
       <table>
         <thead>
           <tr>
-            <th>Question</th>
-            <th>Category</th>
-            <th>Actions</th>
+            <th class="text-center">Question</th>
+            <th class="text-center">Category</th>
+            <th class="text-center">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -27,6 +33,7 @@
             <td><%= question.category %></td>
             <td class="actions">
               <button
+                class="action-btn"
                 onclick="location.href='/questions/<%= question._id %>/edit'"
               >
                 Edit
@@ -35,19 +42,24 @@
                 method="post"
                 action="/questions/<%= question._id %>/delete"
               >
-                <button type="submit">Delete</button>
+                <button class="action-btn" type="submit">Delete</button>
               </form>
             </td>
           </tr>
           <% }); %>
         </tbody>
       </table>
-      <div class="actions">
+      <div class="actions mt-4">
         <button class="add-button" onclick="location.href='/questions/create'">
           Add Question
         </button>
-        <button onclick="location.href='/'">Back</button>
+        <button class="back-button" onclick="location.href='/'">Back</button>
       </div>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
