--- a/public/css/editquestion.css
+++ b/public/css/editquestion.css
@@ -11,14 +11,16 @@ h1 {
 }
 
 form {
-    width: 500px;
+    width: 80%;
     margin: 0 auto;
+    max-width: 500px;
 }
 
 label,
 input,
 select,
-button {
+button,
+a {
     display: block;
     width: 100%;
     padding: 10px;
@@ -43,4 +45,22 @@ button {
 
 button:hover {
     background-color: #0069d9;
+}
+
+a {
+    background-color: #555;
+    color: #03a9f4;
+    text-align: center;
+    text-decoration: none;
+    margin-top: 20px;
+}
+
+a:hover {
+    background-color: #333;
+}
+
+@media (max-width: 767px) {
+    form {
+        width: 100%;
+    }
 }
