--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upgrade Study App | Get Ready For That Upgrade!</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="css/home.css" />
-  </head>
+<%- include('partials/header.ejs')  %>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -63,9 +51,7 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-center text-white py-3">
-      App &copy 2023 | EAB Solutions, Inc.
-    </footer>
+    <%- include('partials/footer.ejs') %>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
