--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
   <body>
     <h1>Add A Question</h1>
     <form id="add-question-form" method="post">
-      <!-- <form method="post" action="/questions/create"> -->
+    
 
       <label for="question">Question:</label>
       <input type="text" id="question" name="question" required />
@@ -33,12 +33,43 @@
       <input type="text" id="answer" name="answer" required />
       <br />
       <button type="submit">Create</button>
+      <button type="button" onclick="location.href='/'">Back</button>
     </form>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="/js/createQuestion.js"></script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Add Questions</title>
+    <link rel="stylesheet" href="/css/addquestion.css" />
+  </head>
+  <body>
+    <h1>Add A Question</h1>
+    <form id="add-question-form" method="post">
+      <label for="question">Question:</label>
+      <input type="text" id="question" name="question" required />
+      <label for="category">Category:</label>
+      <select id="category" name="category">
+        <option value="limitations">Limitations</option>
+        <option value="deice">Deice</option>
+        <option value="human-factors">Human Factors</option>
+        <option value="Memory Items">Memory Items</option>
+      </select>
+      <label for="answer">Answer:</label>
+      <input type="text" id="answer" name="answer" required />
+      <button type="submit">Create</button>
+      <button onclick="location.href='/'">Back</button>
+    </form>
     <script src="/js/createQuestion.js"></script>
   </body>
 </html>
