--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -56,6 +56,7 @@
         <button class="back-button" onclick="location.href='/'">Back</button>
       </div>
     </main>
+    <%- include('../partials/footer.ejs') %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
