--- a/views/questions/update.ejs
+++ b/views/questions/update.ejs
@@ -38,6 +38,7 @@
         />
       </div>
       <button type="submit">Save Changes</button>
+      <a href="/">Back</a>
     </form>
   </body>
 </html>
