--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,44 +1,106 @@
+/* Global styles */
 body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(197, 213, 243);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
 }
 
 .container {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    max-width: 800px;
+    margin: auto;
 }
 
+/* Header styles */
+h1 {
+    font-size: 2.5rem;
+    color: #333;
+    margin-bottom: 1.5rem;
+}
+
+/* Checkbox styles */
+.checkbox-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+label {
+    margin-right: 0.5rem;
+}
+
+input[type='checkbox'] {
+    cursor: pointer;
+}
+
+/* Card styles */
 .card {
-    width: 18rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-img-top {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    width: 100%;
+    height: auto;
+}
+
+.card-body {
+    padding: 1.5rem;
 }
 
 .card-title {
     font-size: 1.5rem;
-    text-align: center;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+/* .answer {
+    display: none;
+} */
+
+.answer-wrapper {
+    min-height: 2.5rem;
 }
 
 .answer {
-    visibility: hidden;
-    height: 3rem;
+    max-height: 0;
     overflow: hidden;
-    font-size: 2rem;
+    opacity: 0;
+    transition: opacity 0.5s ease, max-height 0.5s ease;
+    font-size: 1.6rem;
+    -webkit-transition: opacity 0.5s ease, max-height 0.5s ease;
+    -moz-transition: opacity 0.5s ease, max-height 0.5s ease;
+    -ms-transition: opacity 0.5s ease, max-height 0.5s ease;
+    -o-transition: opacity 0.5s ease, max-height 0.5s ease;
 }
 
-/* Checkbox styling */
-#showAnswersCheckbox {
-    margin-left: 0.5rem;
-    cursor: pointer;
+/* Updated Button styles */
+.btn {
+    margin: 0.25rem;
 }
 
-label {
-    font-weight: bold;
-}
-
-.checkbox-container {
+.btn-container {
     display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.btn-container .btn {
+    flex: 1 0 auto;
+    min-width: 100px;
+}
+
+/* Responsive styles */
+@media (max-width: 767px) {
+    .card {
+        width: 100%;
+    }
+
+    .btn-container .btn {
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
 }
