--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,16 @@
-<%- include('partials/header.ejs')  %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Upgrade Study App | Get Ready For That Upgrade!</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/home.css" />
+  </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -20,7 +32,7 @@
               <a class="nav-link" href="/questions/create">Add Question</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions/:id/edit">Modify Question</a>
+              <a class="nav-link" href="/questions">Modify Question</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/questions">View All Questions</a>
@@ -50,8 +62,6 @@
         </div>
       </div>
     </main>
-
-    <%- include('partials/footer.ejs') %>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
