--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -33,13 +33,19 @@
           <h5>No answers to display</h5>
           <% } else { %>
           <h5 class="card-title"><%=questions[0].question %></h5>
-          <p class="card-text answer"><%=questions[0].answer %></p>
+          <div class="answer-wrapper">
+            <p class="card-text answer"><%=questions[0].answer %></p>
+          </div>
           <% } %>
 
           <br />
-          <button class="btn btn-success" id="show-answer">Show Answer</button>
-          <button class="btn btn-primary" id="prev-question">Prev</button>
-          <button class="btn btn-primary" id="next-question">Next</button>
+          <div class="btn-container">
+            <button class="btn btn-success" id="show-answer">
+              Show Answer
+            </button>
+            <button class="btn btn-primary" id="prev-question">Prev</button>
+            <button class="btn btn-primary" id="next-question">Next</button>
+          </div>
         </div>
       </div>
       <div class="d-flex justify-content-center mt-3">
