--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -34,7 +34,7 @@
           <% } else { %>
           <h5 id="question" class="card-title"></h5>
           <div class="answer-wrapper">
-            <p id="answer" class="card-text answer"></p>
+            <p id="answer" class="card-text answer">Answer goes here</p>
           </div>
 
           <% } %>
