--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
-<footer>
-  <p>Copyright &copy; <%= new Date().getFullYear() %> | EAB Solutions, Inc.</p>
-</footer>
+<div class="row">
+  <div class="col-md-12">
+    <footer>
+      <p>
+        Copyright &copy; <%= new Date().getFullYear() %> | EAB Solutions, Inc.
+      </p>
+    </footer>
+  </div>
+</div>
