--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,60 +1,7 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Questions</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/addquestion.css" />
-  </head>
-  <body>
-    <h1>Add A Question</h1>
-    <form id="add-question-form" method="post">
-    
-
-      <label for="question">Question:</label>
-      <input type="text" id="question" name="question" required />
-      <br />
-      <label for="category">Category:</label>
-      <select id="category" name="category">
-        <option value="limitations">Limitations</option>
-        <option value="deice">Deice</option>
-        <option value="human-factors">Human Factors</option>
-        <option value="Memory Items">Memory Items</option>
-      </select>
-      <br />
-      <label for="answer">Answer:</label>
-      <input type="text" id="answer" name="answer" required />
-      <br />
-      <button type="submit">Create</button>
-      <button type="button" onclick="location.href='/'">Back</button>
-    </form>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/js/createQuestion.js"></script>
-  </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Questions</title>
-    <link rel="stylesheet" href="/css/addquestion.css" />
-  </head>
-  <body>
-    <h1>Add A Question</h1>
+<%- include('../partials/header', {title: 'Add Question', styles: '../css/addquestion.css'}) %>
+<div class="container my-5">
+    <h1 class="text-center">Add A Question</h1>
+    <hr>
     <form id="add-question-form" method="post">
       <label for="question">Question:</label>
       <input type="text" id="question" name="question" required />
@@ -68,8 +15,10 @@
       <label for="answer">Answer:</label>
       <input type="text" id="answer" name="answer" required />
       <button type="submit">Create</button>
-      <button onclick="location.href='/'">Back</button>
+      
     </form>
-    <script src="/js/createQuestion.js"></script>
-  </body>
+</div>
+<%- include('../partials/footer', {styles: '../css/addquestion.css'}) %>
+<script src="/js/createQuestion.js"></script>
+</body>
 </html>
