--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Questions</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/questions.css" />
-  </head>
-  <body>
+<%- include('../partials/header', {title: 'All Questions', styles: 'css/questions.css'}) %>
     <header>
       <h1>All Questions</h1>
     </header>
@@ -49,14 +34,10 @@
           <% }); %>
         </tbody>
       </table>
-      <div class="actions mt-4">
-        <button class="add-button" onclick="location.href='/questions/create'">
-          Add Question
-        </button>
-        <button class="back-button" onclick="location.href='/'">Back</button>
-      </div>
+      
     </main>
-    <%- include('../partials/footer.ejs') %>
+    <footer><%- include('../partials/footer') %></footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
