--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz Time! | Show Me What You Got!</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/quiz.css" />
-  </head>
-  <body>
+<%- include('partials/header', {title: 'Quiz Time!', styles: 'css/quiz.css'}) %>
+
     <h1 class="text-center mt-5">Quiz Time!</h1>
     <div class="container">
       <div class="checkbox-container">
         <label for="showAnswersCheckbox">Always show answers</label>
         <input type="checkbox" id="showAnswersCheckbox" />
+      </div>
+      <div class="checkbox-container">
+        <label for="randomizeCheckbox">Randomize questions</label>
+        <input type="checkbox" id="randomizeCheckbox" />
       </div>
 
       <div class="card mx-auto">
@@ -33,6 +23,7 @@
           <h5>No answers to display</h5>
           <% } else { %>
           <h5 id="question" class="card-title"></h5>
+          <hr />
           <div class="answer-wrapper">
             <p id="answer" class="card-text answer">Answer goes here</p>
           </div>
@@ -57,6 +48,7 @@
         >
       </div>
     </div>
+    <footer><%- include('partials/footer') %></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
