added home link

--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -8,6 +8,7 @@
           <tr>
             <th class="text-center">Question</th>
             <th class="text-center">Category</th>
+            <th class="text-center">Answer</th>
             <th class="text-center">Actions</th>
           </tr>
         </thead>
@@ -16,6 +17,7 @@
           <tr>
             <td><%= question.question %></td>
             <td><%= question.category %></td>
+            <td><%= question.answer  %></td>
             <td class="actions">
               <button
                 class="action-btn"
