--- a/public/css/addquestion.css
+++ b/public/css/addquestion.css
@@ -1,5 +1,9 @@
 body {
     background-color: #343a40;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    min-height: 100vh;
 }
 
 h1 {
