--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Upgrade Study App</a>
+        <a class="navbar-brand" href="#">Upgrade App</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,6 +30,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="/" class="nav-link">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/questions/create">Add Question</a>
             </li>
