--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
           <h2 class="mb-4">
             The app that will help you get ready for your upgrade class.
           </h2>
-          <p class="lead">Developed by:</p>
+          <p class="lead">Developed by: Andrew Butler
+          </p>
         </div>
       </div>
     </main>
