--- a/public/css/addquestion.css
+++ b/public/css/addquestion.css
@@ -1,10 +1,18 @@
 body {
     background-color: #343a40;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
+    margin-top: 30px;
     max-width: 600px;
+}
+
+.container h1 {
+    margin-top: 30px;
 }
 
 .form-group label {
@@ -72,7 +80,7 @@ body {
 
 /* Footer styles */
 
-.footer {
+footer {
     background-color: #292d33;
     color: #fff;
     text-align: center;
@@ -82,6 +90,6 @@ body {
     width: 100%;
 }
 
-.footer p {
+footer p {
     margin-bottom: 0;
 }
