--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,6 +1,27 @@
 <%- include('../partials/header', {title: 'Create Question', styles:
 '../css/addquestion.css'}) %>
 
+<div
+  class="toast"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+  data-delay="5000"
+>
+  <div class="toast-header">
+    <strong class="mr-auto">Success</strong>
+    <button
+      type="button"
+      class="ml-2 mb-1 close"
+      data-dismiss="toast"
+      aria-label="Close"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">Question created successfully.</div>
+</div>
+
 <div class="container my-5">
   <h1 class="text-center">Create Question</h1>
   <hr />
