edit page still needs work

--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -1,8 +1,7 @@
 <%- include('../partials/header', {title: 'All Questions', styles:
 'css/questions.css'}) %>
-
 <header>
-  <h1>Edit and Delete Questions</h1>
+  <h1>All Questions</h1>
 </header>
 <main>
   <table>
@@ -36,5 +35,4 @@
     </tbody>
   </table>
 </main>
-
 <footer><%- include('../partials/footer') %></footer>
